fix table heading alignment during loading

--- a/prototype/public/components/loader/_loader.scss
+++ b/prototype/public/components/loader/_loader.scss
@@ -8,7 +8,7 @@
     text-align: center;
     line-height: 48px;
     width: 12%;
-    border: 1px solid $c-grey-600;
+    border: 1px solid $c-grey-300;
     color: $c-grey-600;
     @extend %fs-data-2;
     font-weight: bold;
